<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimaryBg"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="50dip"
    android:paddingRight="50dip">
    >


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/your_name"
        android:id="@+id/name"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/enter_phone_number"
        android:id="@+id/phoneNumber"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/enter_code"
        android:id="@+id/code"

        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/gradients"
        android:textColor="@color/white"
        android:text="@string/get_verification_code"
        android:id="@+id/send"/>


</LinearLayout>