<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/messageList"
        android:layout_above="@+id/sendLayout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:id="@+id/sendLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mediaList">

        </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradients"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:padding="12dp"
                android:orientation="horizontal">

            <Button
                android:layout_weight="0.15"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:background="@drawable/contact_item"
                android:textSize="12dp"
                android:text="@string/media"
                android:id="@+id/addMedia"/>
            <EditText
                android:id="@+id/new_message"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:padding="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:background="@drawable/contact_item"
                android:layout_weight="0.6"
                android:hint="@string/press_to_type" />
            <Button
                android:layout_weight="0.15"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:textSize="12dp"
                android:background="@drawable/contact_item"
                android:text="@string/send"
                android:id="@+id/send_message"/>
            </LinearLayout>

    </LinearLayout>

</RelativeLayout>